fix(news/ux): don't apply hover states on mobile
Since mobile doesn't really have a "hover" state, browsers generally apply hover on touch/hold. This may be confusing to the user — they may expect a page load and assume it's stuck.

--- a/src/styles/NewsList.module.scss
+++ b/src/styles/NewsList.module.scss
@@ -58,7 +58,7 @@
 		@apply flex flex-col;
 		@apply px-4 py-8;
 		@apply transition-[background-color];
-		@apply #{'hover:bg-hover'};
+		@apply #{'sm:hover:bg-hover'};
 
 		> a {
 			@apply border-b-0;
